# building-a-production-ready-docker-container-for-django-applications

./: .gitignore  README.md
task_manager/: Dockerfile  docker-compose.yaml  entrypoint.py  pyproject.toml  run.sh
task_manager/task_manager/: settings.py  urls.py
task_manager/tasks/: models.py
task_manager/tasks/migrations/: 0001_initial.py
