[tool.poetry]
name = "task-manager"
version = "0.1.0"
description = "App to manage your tasks"
authors = ["Rajkumar Venkatasamy <venkatasamy.rajkumar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "4.2.15"
uvicorn = "^0.30.6"
psycopg2-binary = "^2.9.9"
djangorestframework = "^3.15.2"
whitenoise = "^6.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
